<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyStreet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">search</string>
    <string name="login_or_register">Login or Register</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="nova_ocorrencia">Nova Ocorrência</string>
    <string name="logout">Logout</string>
    <string name="descricao">Descrição</string>
    <string name="morada">Morada</string>
    <string name="adicionar">Adicionar</string>
    <string name="a_enviar">A enviar</string>
    <string name="localidade">Localidade</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="coordenadas_gps">Obter coordenadas do GPS</string>
    <string name="imagem">Imagem</string>
    <string name="adicionar_imagem">Adicionar Imagem</string>
    <string name="tags">Tags</string>
    <string name="title_activity_detalhe_ocorrencia">Detalhe da Ocorrência</string>
    <string name="estado">Estado</string>
    <string name="utilizador">Utilizador</string>
    <string name="comentarios">Comentários</string>

</resources>